Fixed spacing issues and alignment issues of the elements in section-1 and header

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 
 ul {
     list-style-type: none;
+    padding: 0;
 }
 
 a {
@@ -23,8 +24,10 @@ a {
     color: #F9FAF8;
     background-color: #1f2937;
     display: flex;
-    justify-content: space-between;
-    padding-left: 20px;
+    gap: 35vw;
+    justify-content: center;
+    white-space: nowrap;
+    /* padding-left: 20px; */
 }
 
 .header-left {
@@ -32,12 +35,19 @@ a {
     display: flex;
     gap: 10px;
     align-items: center;
+    width: 500px;
+}
+.header-right {
+    display: flex;
+    justify-content: flex-end;
+    width: 300px;
+    
 }
 
 .nav-links {
     display: flex;
     gap: 30px;
-    padding-right: 20px;
+    /* padding-right: 20px; */
 }
 
 /* End-Header Styling */
@@ -46,8 +56,9 @@ a {
 
 .section-1 {
     display: flex;
-    justify-content: space-between;
-    padding: 20px;
+    justify-content: center;
+    gap: 35vw;
+    /* padding: 20px; */
     background-color: #1f2937;
     padding-bottom: 80px;
 }
@@ -63,6 +74,9 @@ a {
     width: 450px;
 }
 
+.information {
+    width: 500px;
+}
 button {
     border-radius: 8px;
     border: none;
